force-app/main/default/objects/Account/fields/AccountIntExtType__c.field-meta.xml
<CustomField>
    <fullName>AccountIntExtType__c</fullName>
    <label>ACCOUNT INT &amp; EXT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AccountIntExtType</valueSetName>
    </valueSet>
</CustomField>