force-app/main/default/objects/Account/fields/Accu_receivablelimits__c.field-meta.xml
<CustomField>
    <fullName>Accu_receivablelimits__c</fullName>
    <description>立替金：最大掛け取引が可能な立替金
パートナー精算：翌月に持ち越しが可能な精算金額</description>
    <label>MAXIMUM AMOUNT OF ACCUM.(ADVANCE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>