force-app/main/default/objects/Account/fields/AFRtype__c.field-meta.xml
<CustomField>
    <fullName>AFRtype__c</fullName>
    <label>STATUS OF JP24H ADVANCED FILING SERVICE</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Custom_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AFRサービス既存顧客</fullName>
            </value>
            <value>
                <fullName>AFRサービス見込み顧客</fullName>
            </value>
            <value>
                <fullName>AFRサービス営業不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>