force-app/main/default/objects/Account/fields/ALL_BB__c.field-meta.xml
<CustomField>
    <fullName>ALL_BB__c</fullName>
    <label>ALL BB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>