force-app/main/default/objects/Account/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>APPROVAL_STATUS</valueSetName>
    </valueSet>
</CustomField>