force-app/main/default/objects/Account/fields/BadDebtAmountLocalBadDebtRollup__c.field-meta.xml
<CustomField>
    <fullName>BadDebtAmountLocalBadDebtRollup__c</fullName>
    <label>Bad Debt Amount(Local)-Bad Debt Rollup</label>
    <summarizedField>BadDebt__c.BadDebtAmountLocal__c</summarizedField>
    <summaryForeignKey>BadDebt__c.Debtor__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>