force-app/main/default/objects/Account/fields/BalToMaxOnBehalfOfLocal__c.field-meta.xml
<CustomField>
    <fullName>BalToMaxOnBehalfOfLocal__c</fullName>
    <formula>Accu_receivablelimits__c -  UncollectedOnBehalfOfLocal__c</formula>
    <label>BAL TO MAX ON-BEHALF-OF AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>