force-app/main/default/objects/Account/fields/BalToMaxReceivableUSD__c.field-meta.xml
<CustomField>
    <fullName>BalToMaxReceivableUSD__c</fullName>
    <formula>MaxAmountReceivableUSD__c -  UncollectedReceivableFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAL TO MAX RECEIVABLE AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>