force-app/main/default/objects/Account/fields/BaltoWarningCombinedAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>BaltoWarningCombinedAmountFCY__c</fullName>
    <formula>WarningCombinedAmountFCY__c -  UncollectedReceivableFCY__c -  UncollectedOnBehalfOfFCY__c</formula>
    <label>Bal to Warning Combined Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>