force-app/main/default/objects/Account/fields/BaltoWarningCombinedAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>BaltoWarningCombinedAmountLocal__c</fullName>
    <formula>WarningCombinedAmountLocal__c -  UncollectedOnBehalfOfLocal__c -  Unpaid__c</formula>
    <label>Bal to Warning Combined Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>