force-app/main/default/objects/Account/fields/BaltoWarningOnBehalfOfAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>BaltoWarningOnBehalfOfAmountLocal__c</fullName>
    <formula>WarningOnBehalfOfAmountLocal__c -  UncollectedOnBehalfOfLocal__c</formula>
    <label>Bal to Warning OnBehalfOf Amount(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>