force-app/main/default/objects/Account/fields/BaltoWarningReceivableAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>BaltoWarningReceivableAmountFCY__c</fullName>
    <formula>WaringReceivableAmountFCY__c -  UncollectedReceivableFCY__c</formula>
    <label>Bal to Warning Receivable Amount(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>