force-app/main/default/objects/Account/fields/BaltoWarningReceivableAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>BaltoWarningReceivableAmountLocal__c</fullName>
    <formula>WaringReceivableAmountLocal__c  -  Unpaid__c</formula>
    <label>Bal to Warning Receivable Amount (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>