force-app/main/default/objects/Account/fields/Bank1__c.field-meta.xml
<CustomField>
    <fullName>Bank1__c</fullName>
    <label>BANK①</label>
    <type>TextArea</type>
</CustomField>