force-app/main/default/objects/Account/fields/Bank2__c.field-meta.xml
<CustomField>
    <fullName>Bank2__c</fullName>
    <label>BANK②</label>
    <type>TextArea</type>
</CustomField>