force-app/main/default/objects/Account/fields/Bank3__c.field-meta.xml
<CustomField>
    <fullName>Bank3__c</fullName>
    <label>BANK③</label>
    <type>TextArea</type>
</CustomField>