force-app/main/default/objects/Account/fields/Bank_Name1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name1__c</fullName>
    <label>Bank Name ①</label>
    <type>TextArea</type>
</CustomField>