force-app/main/default/objects/Account/fields/BankNameForEInvoice__c.field-meta.xml
<CustomField>
    <fullName>BankNameForEInvoice__c</fullName>
    <label>Bank Name for E-Invoice</label>
    <length>100</length>
    <type>Text</type>
</CustomField>