force-app/main/default/objects/Account/fields/BillingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryCode__c</fullName>
    <label>Billing Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CountryCode</valueSetName>
    </valueSet>
</CustomField>