force-app/main/default/objects/Account/fields/Business_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Business_Relationship__c</fullName>
    <inlineHelpText>Choose Customer or Partner; if choose Customer, charge amount can be shown on local invoice and Customer Invoice Summary Report. If choose Partner, charge amount can be shown on D/N, C/N and Partner Outstanding Statement Report.</inlineHelpText>
    <label>Business Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>3rd Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>