force-app/main/default/objects/Account/fields/capical__c.field-meta.xml
<CustomField>
    <fullName>capical__c</fullName>
    <label>CAPITAL FUND</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>