force-app/main/default/objects/Account/fields/Carrier_Code__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If the account is Carrier/Airliner, choose its Carrier code in this field. - Carrier(Sea): 4 characters - Airline Carrier: 2 characters</inlineHelpText>
    <label>Carrier Code</label>
    <referenceTo>Carrier_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>