force-app/main/default/objects/Account/fields/cc_closing_date__c.field-meta.xml
<CustomField>
    <fullName>cc_closing_date__c</fullName>
    <label>CUT-OFF OF REFERENCE DATE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>納品日</fullName>
                <default>true</default>
                <label>納品日</label>
            </value>
            <value>
                <fullName>許可日</fullName>
            </value>
            <value>
                <fullName>請求書送付日</fullName>
            </value>
            <value>
                <fullName>申告日</fullName>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>