force-app/main/default/objects/Account/fields/CCcompany_3__c.field-meta.xml
<CustomField>
    <fullName>CCcompany_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DESIGNATED CUSTOMS CLEARANCE BROKER③</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (指定通関業者-③)</relationshipLabel>
    <relationshipName>CCcompany_3</relationshipName>
    <type>Lookup</type>
</CustomField>