force-app/main/default/objects/Account/fields/ControlBadDebt__c.field-meta.xml
<CustomField>
    <fullName>ControlBadDebt__c</fullName>
    <label>How control Bad Debt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HowToControlWarningMaxAmount</valueSetName>
    </valueSet>
</CustomField>