force-app/main/default/objects/Account/fields/ControlMaxOnBehalfOfAmount__c.field-meta.xml
<CustomField>
    <fullName>ControlMaxOnBehalfOfAmount__c</fullName>
    <label>How control Max OnBehalfOf Amount</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HowToControlWarningMaxAmount</valueSetName>
    </valueSet>
</CustomField>