force-app/main/default/objects/Account/fields/ControlWarningCombinedAmount__c.field-meta.xml
<CustomField>
    <fullName>ControlWarningCombinedAmount__c</fullName>
    <label>How control Warning Combined Amount</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HowToControlWarningMaxAmount</valueSetName>
    </valueSet>
</CustomField>