force-app/main/default/objects/Account/fields/ControlWarningProfitRatio__c.field-meta.xml
<CustomField>
    <fullName>ControlWarningProfitRatio__c</fullName>
    <label>How control Warning Profit Ratio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HowToControlWarningMaxAmount</valueSetName>
    </valueSet>
</CustomField>