force-app/main/default/objects/Account/fields/CopyBillingToShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>CopyBillingToShippingAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Billing Address to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>