force-app/main/default/objects/Account/fields/Custom_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Type__c</fullName>
    <description>Used as an alternative for standard field Type</description>
    <inlineHelpText>For Customer, choose from Domestic Customer-, and partner from Oversea Partner-、vendor from 3RD Vendor-. For your own company, choose Internal Use Only .</inlineHelpText>
    <label>TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>国内顧客 - 見込み</fullName>
                <label>LOCAL CUSTOMER - LEAD(APPROACHING)</label>
            </value>
            <value>
                <fullName>国内顧客 - 既存</fullName>
                <default>true</default>
                <label>LOCAL CUSTOMER - EXISTING</label>
            </value>
            <value>
                <fullName>国内顧客 - フォワーダー</fullName>
                <label>LOCAL CUSTOMER - FORWARDER</label>
            </value>
            <value>
                <fullName>国内顧客 - 営業不要</fullName>
                <label>LOCAL CUSTOMER - NO NEED SALES</label>
            </value>
            <value>
                <fullName>海外顧客 - 見込み</fullName>
                <label>OVERSEA CUSTOMER - LEAD(APPORACHING)</label>
            </value>
            <value>
                <fullName>海外顧客 - 既存</fullName>
                <label>OVERSEA CUSTOMER - EXISTING</label>
            </value>
            <value>
                <fullName>Oversea Customer - No Need Sales</fullName>
            </value>
            <value>
                <fullName>LOCAL PARTNER - LEAD(APPROACHING)</fullName>
            </value>
            <value>
                <fullName>LOCAL PARTNER - EXISTING</fullName>
            </value>
            <value>
                <fullName>LOCAL PARTNER - NO NEED SALES</fullName>
            </value>
            <value>
                <fullName>海外パートナー - 見込み</fullName>
                <label>OVERSEA PARTNER - LEAD(APPROACHING)</label>
            </value>
            <value>
                <fullName>海外パートナー - 既存</fullName>
                <label>OVERSEA PARTNER - EXISTING</label>
            </value>
            <value>
                <fullName>海外パートナー - 営業不要</fullName>
                <label>OVERSEA PARTNER - NO NEED SALES</label>
            </value>
            <value>
                <fullName>業者 - Co-Loader</fullName>
                <label>3RD VENDOR - CONSOLIDATOR</label>
            </value>
            <value>
                <fullName>Co-Loader</fullName>
            </value>
            <value>
                <fullName>業者 - 通関（当社手配先）</fullName>
                <label>3RD VENDOR - CUSTOMS CLEARANCE AGENT/OUR AGENT</label>
            </value>
            <value>
                <fullName>業者 - BB/通関（当社手配先）</fullName>
                <label>3RD VENDOR - BB/CUSTOMERS CLEARANCE/OUR AGENT</label>
            </value>
            <value>
                <fullName>業者 - 通関（お客様手配先）</fullName>
                <label>3RD VENDOR - CUSTOMS CLEARANCE AGENT/CUSTOMER AGENT</label>
            </value>
            <value>
                <fullName>業者 - 運送</fullName>
                <label>3RD VENDOR - TRUCKING</label>
            </value>
            <value>
                <fullName>Rail Agent</fullName>
            </value>
            <value>
                <fullName>Courier/Express</fullName>
            </value>
            <value>
                <fullName>業者 - 船社</fullName>
                <label>3RD VENDOR - CARRIER</label>
            </value>
            <value>
                <fullName>3RDVENDOR - AIRLINER</fullName>
                <label>3RD VENDOR - AIRLINER</label>
            </value>
            <value>
                <fullName>業者 - 倉庫・保管</fullName>
                <label>3RD VENDOR - WAREHOUSE/STORAGE</label>
            </value>
            <value>
                <fullName>Shipping Broker</fullName>
            </value>
            <value>
                <fullName>Packing Vendor</fullName>
            </value>
            <value>
                <fullName>Inspection Vendor</fullName>
            </value>
            <value>
                <fullName>Insurance Agent</fullName>
            </value>
            <value>
                <fullName>業者 - ポート</fullName>
                <label>3RD VENDOR - PORT</label>
            </value>
            <value>
                <fullName>業者 - DEPOT</fullName>
                <label>3RD VENDOR - DEPOT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>