force-app/main/default/objects/Account/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerType</valueSetName>
    </valueSet>
</CustomField>