force-app/main/default/objects/Account/fields/EnglishCompanyName__c.field-meta.xml
<CustomField>
    <fullName>EnglishCompanyName__c</fullName>
    <description>英語の会社名を入れるところです。</description>
    <inlineHelpText>Input Company Name in English</inlineHelpText>
    <label>ACCOUNT NAME(ENG)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>