force-app/main/default/objects/Account/fields/ExpectedShippingplaceNameAddress__c.field-meta.xml
<CustomField>
    <fullName>ExpectedShippingplaceNameAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAIN DELIVERY PLACE・ADDRESS</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>取引先 (主要予定配送先社名・注所)</relationshipLabel>
    <relationshipName>ExpectedShippingplaceNameAddress</relationshipName>
    <type>Lookup</type>
</CustomField>