force-app/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>TAX PAYMENT TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>立替</fullName>
            </value>
            <value>
                <fullName>ダイレクト口座</fullName>
            </value>
            <value>
                <fullName>延納</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>