force-app/main/default/objects/Account/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <label>COMPANY ESTABLISHED DATE</label>
    <type>Date</type>
</CustomField>