force-app/main/default/objects/Account/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>ACCOUNTING PERIOD</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once a year</fullName>
            </value>
            <value>
                <fullName>Twice a year</fullName>
            </value>
            <value>
                <fullName>Three times a year</fullName>
            </value>
            <value>
                <fullName>Four times a year</fullName>
            </value>
            <value>
                <fullName>Five times a year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>