force-app/main/default/objects/Account/fields/FMSBadDebtUSD__c.field-meta.xml
<CustomField>
    <fullName>FMSBadDebtUSD__c</fullName>
    <label>FMS BAD DEBT(USD)</label>
    <summarizedField>CustomObject1__c.BadDebtUSD__c</summarizedField>
    <summaryForeignKey>CustomObject1__c.Field1__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>