force-app/main/default/objects/Account/fields/IndustryDetail__c.field-meta.xml
<CustomField>
    <fullName>IndustryDetail__c</fullName>
    <label>INDUSTRY DETAILS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Custom_Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>船社</fullName>
                <label>SHIPPING LINE</label>
            </value>
            <value>
                <fullName>混載</fullName>
                <label>CONSOLIDATION</label>
            </value>
            <value>
                <fullName>通関関連</fullName>
                <label>CUSTOMS CLEARANCE</label>
            </value>
            <value>
                <fullName>倉庫</fullName>
                <label>WAREHOUSE</label>
            </value>
            <value>
                <fullName>運輸関連</fullName>
                <label>RELATED TO TRANSPORT</label>
            </value>
            <value>
                <fullName>トラック</fullName>
                <label>TRUCK</label>
            </value>
            <value>
                <fullName>ドレー</fullName>
                <label>DRAYAGE</label>
            </value>
            <value>
                <fullName>アパレル</fullName>
                <label>APPAREL</label>
            </value>
            <value>
                <fullName>繊維</fullName>
                <label>FIBER</label>
            </value>
            <value>
                <fullName>男性衣類</fullName>
                <label>MAN GARMENTS</label>
            </value>
            <value>
                <fullName>女性衣類</fullName>
                <label>LADY GARMENTS</label>
            </value>
            <value>
                <fullName>子供服</fullName>
                <label>KIDS GARMENTS</label>
            </value>
            <value>
                <fullName>アンダーウェア</fullName>
                <label>UNDERWEAR</label>
            </value>
            <value>
                <fullName>アクセサリー・小物</fullName>
                <label>ACCESSORY</label>
            </value>
            <value>
                <fullName>雑貨</fullName>
                <label>GENERAL GOODS</label>
            </value>
            <value>
                <fullName>革製品</fullName>
                <label>LEATHER GOODS</label>
            </value>
            <value>
                <fullName>非鉄金属</fullName>
                <label>NONFERROUS METAL</label>
            </value>
            <value>
                <fullName>金属製品</fullName>
                <label>METAL PRODUCTS</label>
            </value>
            <value>
                <fullName>鉄鋼</fullName>
                <label>STEEL</label>
            </value>
            <value>
                <fullName>食品</fullName>
                <label>FOOD</label>
            </value>
            <value>
                <fullName>生鮮食品</fullName>
                <label>FRESH FOOD</label>
            </value>
            <value>
                <fullName>水産品</fullName>
                <label>SEA FOOD PRODUCT</label>
            </value>
            <value>
                <fullName>加工食品</fullName>
                <label>PROCESSED FOOD</label>
            </value>
            <value>
                <fullName>機械</fullName>
                <label>MACHINERY</label>
            </value>
            <value>
                <fullName>部品</fullName>
                <label>PARTS</label>
            </value>
            <value>
                <fullName>水産･農林</fullName>
                <label>SEA / AGRICULTURAL</label>
            </value>
            <value>
                <fullName>化学</fullName>
                <label>CHEMICAL</label>
            </value>
            <value>
                <fullName>ゴム製品</fullName>
                <label>RUBBER PRODUCT</label>
            </value>
            <value>
                <fullName>建設</fullName>
                <label>INFRASTRUCTURE</label>
            </value>
            <value>
                <fullName>パルプ･紙</fullName>
                <label>VALVE・PAPER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>